Add possibility to get all products for admin
